--- a/assets/styles/frontend/common/components/list/pros-cons.less
+++ b/assets/styles/frontend/common/components/list/pros-cons.less
@@ -2,9 +2,15 @@
     .reset-ul();
     width: 100%;
     padding-left: 20px;
+    margin-bottom: 10px;
 
     @media @query-md {
         width: 100% / 2;
+        margin-bottom: 0;
+    }
+
+    &:last-child {
+        margin-bottom: 0;
     }
 
     &__item {
