--- a/assets/styles/frontend/common/components/in/opener.less
+++ b/assets/styles/frontend/common/components/in/opener.less
@@ -7,15 +7,6 @@
         transition: @transition;
     }
 
-    &__gradient {
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        right: 0;
-
-        background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(255,255,255,0.8) 75%, rgba(255,255,255,0) 100%);
-    }
-
     &__button {
         position: relative;
         display: flex;
@@ -24,9 +15,10 @@
         justify-content: center;
         margin: -15px 0 10px;
         cursor: pointer;
+        z-index: @z-index-above;
 
-        border-radius: @radius;
         transition: @transition;
+        background-color: @color-f;
 
         &__text {
             margin: 0 10px 0 0;
