Fixed some image sizes.

--- a/templates/Front/Content/Product/productListMacro.html.twig
+++ b/templates/Front/Content/Product/productListMacro.html.twig
@@ -194,7 +194,7 @@
                     <div class="list-last-visited__item">
                         <a href="{{ productView.action.detailUrl }}" class="list-last-visited__item__block">
                             <div class="list-last-visited__item__image dont-print">
-                                {{ image(productView.image, { size: 'list', alt: productView.name, lazy: true }) }}
+                                {{ image(productView.image, { size: 'mediumThumbnail', alt: productView.name, lazy: true }) }}
                             </div>
 
                             <div class="list-last-visited__item__info">
