--- a/templates/Front/Content/Product/listByBrand.html.twig
+++ b/templates/Front/Content/Product/listByBrand.html.twig
@@ -40,6 +40,9 @@
                 </div>
             </div>
 
+            {% if visibleCategories|length > 0 %}
+                {% include 'Front/Content/Category/categoryList.html.twig' with {'categories': visibleCategories, 'brand': brand} %}
+            {% endif %}
             <div>
                 {{ render(controller('App\\Controller\\Front\\ProductController:selectOrderingModeForListByBrandAction')) }}
                 {% include 'Front/Content/Product/productsWithControls.html.twig' with {paginationResult: paginationResult, filterFormSubmitted: false, hiddenFilterFormButton: true } %}
