add rel "prev" and "next" links to <head> section of paginated pages

--- a/templates/Front/Content/Product/listByBrand.html.twig
+++ b/templates/Front/Content/Product/listByBrand.html.twig
@@ -7,6 +7,9 @@
 {% block meta_robots %}
     {{ paginator.metaRobots(paginationResult) }}
 {% endblock %}
+{% block meta_rel_links %}
+    {{ paginator.relLinks(paginationResult) }}
+{% endblock %}
 
 {% block title %}
     {{ brand.getSeoTitle(domain.id)|default(brand.name) }}
