--- a/templates/Front/Content/Product/list.html.twig
+++ b/templates/Front/Content/Product/list.html.twig
@@ -8,6 +8,9 @@
 {% block meta_robots %}
     {{ paginator.metaRobots(paginationResult, disableIndexing) }}
 {% endblock %}
+{% block meta_rel_links %}
+    {{ paginator.relLinks(paginationResult) }}
+{% endblock %}
 
 {% block meta_description %}
     {{- category.getSeoMetaDescription(domain.id)|default(getSeoMetaDescription()) -}}
@@ -57,7 +60,7 @@
                         </div>
                     {% endif %}
 
-                    <div class="box-list__content js-product-list-ajax-filter-products-with-controls">         
+                    <div class="box-list__content js-product-list-ajax-filter-products-with-controls">
                         {% if visibleChildren is not empty %}
                             {% include 'Front/Content/Category/categoryList.html.twig' with {'categories': visibleChildren, 'currentCategory': category} %}
                         {% endif %}
