--- a/templates/Front/Content/Product/search.html.twig
+++ b/templates/Front/Content/Product/search.html.twig
@@ -10,6 +10,9 @@
 {% block meta_robots %}
     <meta name="robots" content="noindex, follow">
 {% endblock %}
+{% block meta_rel_links %}
+    {{ paginator.relLinks(paginationResultProducts) }}
+{% endblock %}
 
 {% block main_content %}
     <div class="box-search">
