--- a/templates/Front/Layout/base.html.twig
+++ b/templates/Front/Layout/base.html.twig
@@ -7,6 +7,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=11" />
         <meta name="robots" content="noindex, nofollow">
         {% block meta_robots %}{% endblock %}
+        {% block meta_rel_links %}{% endblock %}
 
         {{ render(controller('App\\Controller\\Front\\GtmController:headAction')) }}
 
