--- a/templates/Front/Content/Product/listByBrand.html.twig
+++ b/templates/Front/Content/Product/listByBrand.html.twig
@@ -13,6 +13,7 @@
 
 {% block title %}
     {{ brand.getSeoTitle(domain.id)|default(brand.name) }}
+    {{ paginator.titleAddon(paginationResult) }}
 {% endblock %}
 
 {% block meta_description %}
@@ -25,6 +26,7 @@
         <div class="box-list">
             <h1 class="in-title in-title--big in-title--center">
                 {{ brand.getSeoH1(domain.id)|default(brand.name) }}
+                {{ paginator.titleAddon(paginationResult) }}
             </h1>
 
             <div class="box-list__producer">
