--- a/templates/Front/Inline/Product/detailAvailability.html.twig
+++ b/templates/Front/Inline/Product/detailAvailability.html.twig
@@ -6,35 +6,11 @@
             {{ availability.productAvailability(product) }}
         </div>
 
-        {% set stocksWithoutZeroQuantityOnPickupPlaceStore = product.stocksWithoutZeroQuantityOnPickupPlaceStore(getDomain()) %}
-        {% if stocksWithoutZeroQuantityOnPickupPlaceStore|length > 0 and product.isInAnySaleStock is same as (false) %}
+        {% if product.isInAnySaleStock and product.realNonSaleStocksQuantity > 0 and not product.sellingDenied %}
             <span class="in-availability__text-big">
-                {{ 'nebo na'|trans }}&nbsp
+                {{ 'a další za běžnou cenu'|trans }}
             </span>
-            <a
-                href="#"
-                class="in-availability__stores-big underline-small js-detail-availability-window-opener"
-                data-product-id="{{ product.id }}"
-                >
-                {{ 'prodejně'|trans }}
-            </a>
         {% endif %}
-        <div class="display-none js-availability-table_{{ product.id }}">
-            <table class="table-main full-width">
-                <thead>
-                <tr>
-                    <th>{{ 'Prodejna'|trans }}</th>
-                </tr>
-                </thead>
-                <tbody>
-                {% for storeWithStock in stocksWithoutZeroQuantityOnPickupPlaceStore %}
-                    <tr>
-                        <td>{{ storeWithStock.store.name }}</td>
-                    </tr>
-                {% endfor %}
-                </tbody>
-            </table>
-        </div>
     </div>
 {% endmacro %}
 
