design: fix small css issues

--- a/assets/styles/frontend/common/components/box/reviews.less
+++ b/assets/styles/frontend/common/components/box/reviews.less
@@ -127,10 +127,8 @@
         }
 
         &__pros-cons {
-            &__lists {
-                display: flex;
-                flex-direction: row;
-                margin-left: -20px;
+            &__text {
+                margin-bottom: 10px;
             }
         }
     }
