--- a/assets/styles/frontend/common/components/in/rating.less
+++ b/assets/styles/frontend/common/components/in/rating.less
@@ -2,7 +2,6 @@
 
 .in-rating {
     position: relative;
-    margin-left: -@in-rating-item-gap;
 
     &__list {
         .reset-ul();
@@ -25,6 +24,10 @@
         &__item {
             margin-left: @in-rating-item-gap;
             line-height: 0;
+
+            &:first-child {
+                margin-left: 0;
+            }
             
             .svg-icon {
                 height: 16px;
