--- a/assets/styles/frontend/common/components/list/pros-cons.less
+++ b/assets/styles/frontend/common/components/list/pros-cons.less
@@ -1,13 +1,7 @@
 .list-pros-cons {
     .reset-ul();
     width: 100%;
-    padding-left: 20px;
     margin-bottom: 10px;
-
-    @media @query-md {
-        width: 100% / 2;
-        margin-bottom: 0;
-    }
 
     &:last-child {
         margin-bottom: 0;
@@ -24,8 +18,8 @@
         &:before {
             position: absolute;
             left: 0;
-            top: 50%;
-            transform: translateY(-50%);
+            top: 0;
+            line-height: 22px;
 
             font-family: 'svg';
             font-size: 8px;
