--- a/assets/styles/frontend/common/components/list/products-line.less
+++ b/assets/styles/frontend/common/components/list/products-line.less
@@ -41,6 +41,7 @@
             align-items: center;
             flex-wrap: wrap;
             width: 100%;
+            height: 100%;
             padding: 10px;
 
             text-decoration: none;
