--- a/templates/Front/Content/Default/index.html.twig
+++ b/templates/Front/Content/Default/index.html.twig
@@ -52,21 +52,9 @@
         </div>
     {% endif %}
 
-    {% if newProducts is not empty %}
-        <div class="web__line">
-            <div class="web__container web__container--no-padding">
-                <div class="box-products-slider">
-                    <h2 class="box-products-slider__title">
-                        {{ 'Novinky'|trans }}
-                    </h2>
-                    {% if newsCategory is not null %}
-                        <a href="{{ url('front_product_list', { id: newsCategory.id }) }}">{{ 'Přejít na všechny novinky'|trans }}</a>
-                    {% endif %}
-                    {{ productList.horizontalList(newProducts, '', 'h3', 'new-products', true, false, true) }}
-                </div>
-            </div>
-        </div>
-    {% endif %}
+    {% cache 'newProducts' {lifetime:60*60*1, domainId: domainId} %}
+        {{ render(controller('App\\Controller\\Front\\HomepageController:newProductsAction')) }}
+    {% endcache %}
 
     <div class="web__line">
         <div class="web__container web__container--border-radius web__container--dark">
