--- a/templates/Front/Content/Default/index.html.twig
+++ b/templates/Front/Content/Default/index.html.twig
@@ -31,26 +31,9 @@
 
     {{ render(controller('App\\Controller\\Front\\TopProductController:listAction')) }}
 
-    {% if priceBombProducts is not empty %}
-        <div class="web__line">
-            <div class="web__container web__container--border-radius web__container--light">
-                <div class="box-products-bomb">
-                    <div class="box-products-bomb__content">
-                        {{ productList.productsBomb(priceBombProducts, 'h3') }}
-                        <div class="box-products-bomb__fishes">
-                            <img src="{{ asset('public/frontend/images/fishes-big.svg')}}" alt="{{ 'Rybky'|trans }}">
-                        </div>
-                    </div>
-                    <h1 class="box-products-bomb__title">
-                        {{ 'Cenová'|trans }}
-                        <div class="box-products-bomb__title__colored-text">
-                            <span>b</span><span>o</span><span>m</span><span>b</span><span>a</span>
-                        </div>
-                    </h1>
-                </div>
-            </div>
-        </div>
-    {% endif %}
+    {% cache 'priceBombProducts' {lifetime:60*60*4, domainId: domainId} %}
+        {{ render(controller('App\\Controller\\Front\\HomepageController:priceBombProductsAction')) }}
+    {% endcache %}
 
     {% cache 'newProducts' {lifetime:60*60*1, domainId: domainId} %}
         {{ render(controller('App\\Controller\\Front\\HomepageController:newProductsAction')) }}
