--- a/templates/Front/Content/Product/boxTabs.html.twig
+++ b/templates/Front/Content/Product/boxTabs.html.twig
@@ -119,7 +119,7 @@
                                 </ul>
                             </div>
 
-                            {{ _self.parameters(product, productParameterValues, parametersHeadline, productVisibleProductCategoryDomains) }}
+                            {{ _self.parameters(product, productParameterValues, parametersHeadline) }}
                             {{ _self.files(product) }}
                         </div>
                     {% endif %}
@@ -164,7 +164,7 @@
     {% endif %}
 {% endmacro %}
 
-{% macro parameters(product, productParameterValues, parametersHeadline, productVisibleProductCategoryDomains) %}
+{% macro parameters(product, productParameterValues, parametersHeadline) %}
     {% if productParameterValues|length > 0 %}
         <div class="in-tab__content__item__block">
             <h3 class="in-tab__content__item__title">
