--- a/templates/Front/Content/Product/boxTabs.html.twig
+++ b/templates/Front/Content/Product/boxTabs.html.twig
@@ -3,14 +3,14 @@
 {{ self.productTabs(
     product,
     productMainCategory,
-    youtubeDetails,
+    youtubeVideoIds,
     productVisibleProductCategoryDomains
 ) }}
 
 {% macro productTabs(
     product,
     productMainCategory,
-    youtubeDetails,
+    youtubeVideoIds,
     productVisibleProductCategoryDomains
 ) %}
     {% set domain = getDomain() %}
@@ -50,6 +50,36 @@
                             </div>
                         </div>
                     {% endif %}
+
+                    {% if youtubeVideoIds %}
+                        <div id="video">
+                            <div class="in-tab__content__title js-tabs-button active" data-tab-id="videos">
+                                <a href="#" class="in-tab__content__title__link">
+                                    {{ videosHeadline }}
+                                </a>
+                                <i class="svg svg-triangle"></i>
+                            </div>
+                            <div class="in-tab__content__item js-tabs-content active" data-tab-id="videos">
+                                <div class="in-user-text" itemprop="videos">
+                                    <h3 class="in-user-text__title">
+                                        {{ videosHeadline }}
+                                    </h3>
+                                    {% for youtubeVideoId in youtubeVideoIds %}
+                                        <div class="youtubeWrapper margin-bottom-10">
+                                            <iframe
+                                                    width="560"
+                                                    height="315"
+                                                    src="https://www.youtube.com/embed/{{ youtubeVideoId }}"
+                                                    frameborder="0"
+                                                    allowfullscreen
+                                            ></iframe>
+                                        </div>
+                                    {% endfor %}
+                                </div>
+                            </div>
+                        </div>
+                    {% endif %}
+
                 </div>
 
                 <div class="in-tab__content__right">
@@ -125,8 +155,8 @@
                     {% endif %}
                 </div>
 
-                <div class="in-tab__content__bottom">    
-                    {% if youtubeDetails %}
+                <div class="in-tab__content__bottom">
+                    {% if youtubeVideoIds %}
                         <div id="video">
                             <div class="in-tab__content__title js-tabs-button active" data-tab-id="videos">
                                 <a href="#" class="in-tab__content__title__link">
@@ -141,12 +171,12 @@
                                     </h3>
 
                                     <div class="in-user-text__videos">
-                                        {% for youtubeDetail in youtubeDetails %}
+                                        {% for youtubeVideoId in youtubeVideoIds %}
                                             <div class="in-user-text__videos__item">
                                                 <iframe
                                                         width="100%"
                                                         height="315"
-                                                        src="https://www.youtube.com/embed/{{ youtubeDetail.getVideoId() }}"
+                                                        src="https://www.youtube.com/embed/{{ youtubeVideoId }}"
                                                         frameborder="0"
                                                         allowfullscreen
                                                 ></iframe>
